[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "tqdm>=4.66.4",
    "notebook==7.1.2",
    "openai>=1.35.3",
    "elasticsearch>=8.14.0",
    "ipykernel>=6.29.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "NONE"}


[tool.pdm]
distribution = false
